plugins {
    id 'java'
    id 'com.diffplug.spotless' version '5.0.0'
}

repositories {
    maven {
        url = uri('https://plugins.gradle.org/m2/')
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
}

group = 'com'
version = '3.0'
description = 'This is a selection of competitive programming solutions and problems.'
sourceCompatibility = '17'

spotless {
    java {
        googleJavaFormat()
    }
    groovyGradle {
        target fileTree('.') {
            include '**/*.gradle'
            exclude '**/build/**', '**/build-*/**'
        }
        greclipse()
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
    }
    format 'misc', {
        target fileTree('.') {
            include '**/*.md', '**/.gitignore'
            exclude '**/build/**', '**/build-*/**'
        }
        trimTrailingWhitespace()
        indentWithSpaces(2)
        endWithNewline()
    }
}

compileJava.dependsOn spotlessApply

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
